--- a/src/components/ProfessionalSummary.astro
+++ b/src/components/ProfessionalSummary.astro
@@ -1,7 +1,47 @@
 ---
-
+import { Image } from "astro:assets";
+import me from "../assets/images/me.jpeg";
 ---
 
-<div>
-	<h1>Hola</h1>
-</div>
+<section
+  class="bg-[linear-gradient(135deg,#0a1118_0%,#162431_100%)]
+  min-h-96 md:py-20 py-10 px-5 md:px-20 flex flex-col items-center"
+>
+  <span
+    class="flex items-center self-start bg-neon-blue/20 border border-neon-blue/30
+     text-pure-white text-xs font-medium px-1.5 py-0.5 rounded-full w-lg max-w-full"
+  >
+    <span
+      class="animate-ping relative h-1.5 w-1.5 bg-green-500 rounded-full me-1"
+    >
+    </span>
+    <span class="absolute h-1.5 w-1.5 bg-green-500 rounded-full me-1"></span>
+
+    <p class="ml-2">Open to work</p>
+  </span>
+  <div class="grid grid-cols-2 gap-4">
+    <div class="h-full flex flex-col justify-center">
+      <h1 class="text-6xl font-bold text-pure-white">
+        Emmanuel Gutierrez <br />
+        <span class="text-neon-blue">Fullstack</span> Developer
+      </h1>
+      <p class="font-light mt-4 text-text-muted">
+        Desarrollador Fullstack con experiencia en NestJS, Node.js, NextJs y
+        React, con sólida experiencia en backend en API REST y GraphQL, MongoDB
+        (Mongoose) y PostgreSQL, enfocado en la creación de aplicaciones web
+        seguras y escalables.
+      </p>
+    </div>
+    <div class="flex justify-center">
+      <div class="border border-neon-blue/15 rounded-4xl p-3.5">
+        <Image
+          src={me}
+          alt="me"
+          width={500}
+          height={500}
+          class="rounded-3xl w-80 h-90 object-cover"
+        />
+      </div>
+    </div>
+  </div>
+</section>
