--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -111,6 +111,8 @@
   --color-header-bg: var(--header-bg);
   --color-header-text: var(--header-text);
   --color-theme-toggle-bg: var(--theme-toggle-bg);
+  --color-blue-title: var(--blue-title);
+  --color-dark-blue: var(--dark-blue);
 }
 
 @layer base {
@@ -120,7 +122,7 @@
     --text-main: var(--color-deep-navy);
     --text-muted: var(--color-text-gray);
     --border-subtle: var(--color-outline-gray);
-    --header-bg: var(--color-deep-navy);
+    --header-bg: var(--color-dark-blue);
     --header-text: var(--color-pure-white);
     --theme-toggle-bg: var(--color-deep-dark-blue);
 
@@ -133,8 +135,10 @@
     --snow-white: #ffffff;
     --outline-gray: #f3f4f6;
     --electric-blue: #1d8cf8;
+    --blue-title:#0070F3;
     --deep-navy: #0b132b;
     --text-gray: #4b5563;
+    --dark-blue:#161D24
   }
 
   .dark {
@@ -144,7 +148,7 @@
     --text-muted: var(--color-vapor-gray);
     --border-subtle: var(--color-border-blue);
 
-    --header-bg: var(--color-deep-dark-blue);
+    --header-bg: var(--color-dark-blue);
     --header-text: var(--color-pure-white);
     --theme-toggle-bg: var(--color-pure-white);
   }
