--- a/src/components/ProfessionalSummary.astro
+++ b/src/components/ProfessionalSummary.astro
@@ -19,13 +19,13 @@ import me from "../assets/images/me.jpeg";
 
     <p class="ml-2">Open to work</p>
   </span>
-  <div class="grid grid-cols-2 gap-4">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
     <div class="h-full flex flex-col justify-center">
       <h1 class="text-6xl font-bold text-pure-white">
         Emmanuel Gutierrez <br />
         <span class="text-neon-blue">Fullstack</span> Developer
       </h1>
-      <p class="font-light mt-4 text-text-muted">
+      <p class="font-light mt-4 text-vapor-gray">
         Desarrollador Fullstack con experiencia en NestJS, Node.js, NextJs y
         React, con sólida experiencia en backend en API REST y GraphQL, MongoDB
         (Mongoose) y PostgreSQL, enfocado en la creación de aplicaciones web
