--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import HomeContainer from '../components/HomeContainer.astro';
 import ProfessionalSummary from '../components/ProfessionalSummary.astro';
 import Layout from '../layouts/Layout.astro';
 
@@ -9,4 +10,5 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 	<ProfessionalSummary />
+	<HomeContainer />
 </Layout>
