--- a/src/components/common/Header.astro
+++ b/src/components/common/Header.astro
@@ -4,7 +4,7 @@ import Download from "../../assets/svg/download.svg";
 import Link from "./Link.astro";
 ---
 
-<header class="bg-header-bg py-2 text-header-text border-b border-snow-white/5">
+<header class="bg-header-bg py-2 text-header-text border-b border-snow-white/5 sticky top-0 z-50">
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="flex h-16 items-center justify-between">
       <div class="flex-1 md:flex md:items-center md:gap-12">
