Download button y menu mobile

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -44,7 +44,7 @@ const experience = [
 ];
 ---
 
-<div class="container mx-auto">
+<div class="container mx-auto" id="experience">
   <SectionTitle title="Experiencia" />
   <ol
     class="relative space-y-8 before:absolute before:ml-1 before:mt-1 before:h-full before:w-0.5 before:rounded-full before:bg-electric-blue"
