--- a/src/components/ProfessionalSummary.astro
+++ b/src/components/ProfessionalSummary.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import me from "../assets/images/me.jpeg";
 ---
 
-<section
+<section id="professional-summary"
   class="bg-[linear-gradient(135deg,#0a1118_0%,#162431_100%)]
   min-h-96 md:py-20 py-10 px-5 md:px-20 flex flex-col items-center"
 >
