--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -25,7 +25,7 @@ const contact = [
 ];
 ---
 
-<div>
+<div id="contact">
   <SectionTitle title="Contacto" />
   <Card>
     <div class="flex flex-col gap-6">
