--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -110,7 +110,7 @@ const proyects = [
 ];
 ---
 
-<div>
+<div id="proyects">
   <SectionTitle title="Proyectos" />
   <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
     {
