--- a/src/components/HomeContainer.astro
+++ b/src/components/HomeContainer.astro
@@ -9,11 +9,11 @@ import Skills from "./Skills.astro";
 <div
   class="grid grid-cols-1 md:grid-cols-3 px-5 md:px-10 lg:px-30 gap-16 py-20"
 >
-  <div class="col-span-2 flex flex-col gap-10">
+  <div class="col-span-1 md:col-span-2 flex flex-col gap-10">
     <Experience />
     <Proyects/>
   </div>
-  <div class="col-span-1 flex flex-col gap-10">
+  <div class="col-span-1 md:col-span-1 flex flex-col gap-10">
     <Skills />
     <Education />
     <Contact />
