--- a/src/components/ProfessionalSummary.astro
+++ b/src/components/ProfessionalSummary.astro
@@ -3,24 +3,25 @@ import { Image } from "astro:assets";
 import me from "../assets/images/me.jpeg";
 ---
 
-<section id="professional-summary"
+<section
+  id="professional-summary"
   class="bg-[linear-gradient(135deg,#0a1118_0%,#162431_100%)]
   min-h-96 md:py-20 py-10 px-5 md:px-20 flex flex-col items-center"
 >
-  <span
-    class="flex items-center self-start bg-neon-blue/20 border border-neon-blue/30
-     text-pure-white text-xs font-medium px-1.5 py-0.5 rounded-full w-lg max-w-full"
-  >
-    <span
-      class="animate-ping relative h-1.5 w-1.5 bg-green-500 rounded-full me-1"
-    >
-    </span>
-    <span class="absolute h-1.5 w-1.5 bg-green-500 rounded-full me-1"></span>
-
-    <p class="ml-2">Open to work</p>
-  </span>
   <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
     <div class="h-full flex flex-col justify-center">
+      <span
+        class="flex items-center self-start bg-neon-blue/20 border border-neon-blue/30
+     text-pure-white text-xs font-medium px-4 py-2 rounded-full w-lg max-w-full mb-8"
+      >
+        <span
+          class="animate-ping relative h-3 w-3 bg-green-500 rounded-full me-1"
+        >
+        </span>
+        <span class="absolute h-3 w-3 bg-green-500 rounded-full me-1"></span>
+
+        <p class="ml-2 text-[14px]">Open to work / Disponible para trabajar</p>
+      </span>
       <h1 class="text-6xl font-bold text-pure-white">
         Emmanuel Gutierrez <br />
         <span class="text-neon-blue">Fullstack</span> Developer
