--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/common/Header.astro";
 import "../styles/global.css";
+const {title} = Astro.props;
 ---
 
 <!doctype html>
@@ -32,7 +33,7 @@ import "../styles/global.css";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>{title}</title>
   </head>
   <body class="bg-bg-page text-text-main">
     <Header />
